Added short service's explanation in index.html

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p #{title} is a url shortener in nodejs.
+  p To get a new short url add 'api/new?url=[your URL]' to the address bar above. You will get the replacement link"
